test/compile_errors/err_nonassoc_equality_chain.w
//! expect-check-fail: operator '==' is non-associative; parenthesize the expression

fn main:
    let a = 1
    let b = 1
    let c = 1
    let _x = a == b == c
